@@ -33,8 +33,11 @@
 package com.vividsolutions.jump.workbench.ui.plugin;
 
 import java.awt.event.KeyEvent;
+import java.util.Collection;
 
 import com.vividsolutions.jump.I18N;
+import com.vividsolutions.jump.util.FileUtil;
+import com.vividsolutions.jump.workbench.model.Layer;
 import com.vividsolutions.jump.workbench.ui.images.IconLoader;
 import com.vividsolutions.jump.workbench.plugin.PlugInContext;
 import javax.swing.ImageIcon;
@@ -58,6 +61,17 @@ public class SaveProjectPlugIn extends SaveProjectAsPlugIn {
 
         if (context.getTask().getProjectFile() == null) {
             return super.execute(context);
+        }
+
+        Collection<Layer> collection = ignoredLayers(context.getTask());
+        if (collection.size() > 0) {
+            // Starting with OpenJUMP 1.10 (2016-11-12), the plugin uses
+            // org.openjump.core.ui.plugin.file.SaveLayersWithoutDataSourcePlugIn
+            // to give the user the possibility to save unsaved layers to HD
+            // before saving the project
+            new org.openjump.core.ui.plugin.file.SaveLayersWithoutDataSourcePlugIn()
+                    .execute(context, collection, FileUtil
+                            .removeExtensionIfAny(context.getTask().getProjectFile()));
         }
 
         save(context.getTask(), context.getTask().getProjectFile(),
