@@ -3,6 +3,9 @@
 # 2. make sure that lines break at 80 chars for constricted display situations
 #<-------------------------------- 80 chars ---------------------------------->#
 
+2016-11-12 mmichaud <m.michael.michaud@orange.fr>
+  * Fix #442 Missing unsaved layers warning in SaveProjectPlugIn
+
 2016-11-11 mmichaud <m.michael.michaud@orange.fr>
   * Add 3 functions in GeometryFunction plugin
     - Simplifier (Remove small segments)
